<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/connect_button"
            tools:ignore="ButtonStyle"
            android:elevation="0dp"
            android:layout_weight="1" />

        <Button
            android:text="@string/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/disconnect_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_button"
            android:text="@string/start_client"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

    <TextView
        android:text="@string/device_info"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/device_info" />

    <TextView
        android:text="@string/device_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/device_address" />

    <TextView
        android:text="@string/group_owner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/group_owner" />

    <TextView
        android:text="@string/group_ip"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/group_ip" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status_text" />
    </LinearLayout>


</LinearLayout>