<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/this_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_name" />

        <TextView
            android:text="@string/device_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_status" />

    </LinearLayout>

    <TextView
        android:text="@string/peers_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="263dp" />

    <TextView
        android:text="@string/no_devices_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/android:empty" />

</LinearLayout>